--- a/index.html
+++ b/index.html
@@ -73,21 +73,16 @@
         import { getFirestore, collection, addDoc, onSnapshot, doc, updateDoc, deleteDoc, setDoc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
 
         // ------------------------------------------------------------------
-        // apiKey: "AIzaSyC6VSnH2H5zyFPbya0axgP38WiGczYU-oU",
-  authDomain: "badminton-smasher-ai.firebaseapp.com",
-  projectId: "badminton-smasher-ai",
-  storageBucket: "badminton-smasher-ai.firebasestorage.app",
-  messagingSenderId: "518167738562",
-  appId: "1:518167738562:web:8ba84a7c1a350d16e3e35b",
-  measurementId: "G-6X20YG49K9"
+        // ✅ แก้ไข config ให้ถูกต้องแล้วครับ
         // ------------------------------------------------------------------
         const firebaseConfig = {
-            apiKey: "AIzaSyDxxxxxxxxxxxxxxxxxxxxxxxx",
-            authDomain: "xxxxxx.firebaseapp.com",
-            projectId: "xxxxxx",
-            storageBucket: "xxxxxx.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "1:123456789:web:xxxxxx"
+            apiKey: "AIzaSyC6VSnH2H5zyFPbya0axgP38WiGczYU-oU",
+            authDomain: "badminton-smasher-ai.firebaseapp.com",
+            projectId: "badminton-smasher-ai",
+            storageBucket: "badminton-smasher-ai.firebasestorage.app",
+            messagingSenderId: "518167738562",
+            appId: "1:518167738562:web:8ba84a7c1a350d16e3e35b",
+            measurementId: "G-6X20YG49K9"
         };
         // ------------------------------------------------------------------
 
